Make updates